<resources>
    <string name="app_name">Train2Fit</string>

    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="loading">Loading...</string>
    <string name="UserName">Name</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_type_of_trainer">Select Type of Trainer</string>
    <string name="title_appointment_detail">Appointment Detail</string>
    <string name="action_settings">About</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="seleted_option">Seleted Option</string>
    <string name="enter_notes">Enter notes</string>
    <string name="enter_date">Pick date</string>

    <string name="pick_date">Pick Date</string>
    <string name="pick_time">Pick Time</string>

    <string name="facebook_app_id">131578134275752</string>
    <string name="fb_login_protocol_scheme">fb131578134275752</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">My Profile</string>
    <string name="hint_email">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_dob">DOB</string>
    <string name="hint_mobile">Mobile</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_address">Address</string>
    <string name="check_option">Remember Username and Password</string>

    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Register here if not a member !</string>
    <string name="btn_link_to_login">Already a Member ?</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">Enter your email. We will send you a link to reset password !</string>
    <string name="fullName">Full Name</string>
    <string name="upload_image">Upload Image</string>

    <string name="trainer_name">Trainer 1</string>
    <string name="trainer_type">Yoga Trainer</string>
    <string name="trainer_email">yogatrainer@train2fit.com</string>
    <string name="trainer_phone">+353 123456789</string>
    <string name="trainer_time">24-11-2017 18:50:00</string>
    <string name="appointment_notes">No notes available for this visit</string>
    <string name="trainer_location">Belfield</string>



    <string name="about_title"> About Train2Fit App</string>
    <string name="about_app">
        Our App provides a platform to connect potential health trainers with the users requiring their service. It is a one stop solution enabling
        service delivered at the users door step. The user just has to login, book appointment, sit back and relax ! Our health trainers will be at
        your service on your will ! Stay healthy, Stay Fit through our Train2Fit App
    </string>
    <string name="about_footer">
        Version : 1.0 "\n\n"
        "\u00a9" All Rights Reserved
    </string>

</resources>
