<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#23B797"
    android:fitsSystemWindows="true"
    tools:context="com.t2f.train2fit.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_email"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_password"
                android:textColorHint="@android:color/white"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btn_login"
            android:textColor="@android:color/white"
            android:background="@drawable/corner_button"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dip"
            android:text="@string/btn_login" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_option"
            android:layout_marginTop="20dip"
            android:textColor="@android:color/white"
            android:id="@+id/check_upass"/>

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:textColor="@android:color/white"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#c0c0c0"
            android:layout_gravity="center"/>


        <Button
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@null"
            android:textColor="@android:color/white"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textSize="15dp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#c0c0c0"
            android:layout_gravity="center"/>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
