<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#23B797"
    android:fitsSystemWindows="true"
    tools:context="com.t2f.train2fit.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/fullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:hint="@string/fullName"
                android:textColorHint="@android:color/white"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:hint="@string/email"
                android:textColorHint="@android:color/white"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:textColor="@android:color/white"
                android:hint="@string/hint_password"
                android:textColorHint="@android:color/white"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:textColor="@android:color/white"
                android:hint="@string/hint_dob"
                android:textColorHint="@android:color/white"
                android:inputType="date"
                android:maxLines="1"
                android:singleLine="true"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:textColor="@android:color/white"
                android:hint="@string/hint_mobile"
                android:textColorHint="@android:color/white"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:textColor="@android:color/white"
                android:hint="@string/hint_address"
                android:textColorHint="@android:color/white"
                android:inputType="textPostalAddress"
                android:maxLines="1"
                android:singleLine="true"
                />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/sign_up_button"
            style="?android:textAppearanceSmall"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:background="@drawable/corner_button"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:layout_marginTop="16dp"
            android:text="@string/action_sign_in_short"
            android:textStyle="bold" />


        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:textColor="@android:color/white"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textSize="15dp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#c0c0c0"
            android:layout_gravity="center"/>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
