<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#23B797"
    tools:context="com.t2f.train2fit.AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/about_title"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_title"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/about_app"
            android:textSize="16sp"
            android:padding="15dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/about_footer"
            android:textSize="16sp"
            android:gravity="bottom|center_horizontal"
            android:padding="15dp"
            android:layout_marginTop="20dp"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo"/>


    </LinearLayout>



</android.support.constraint.ConstraintLayout>
