<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/detail_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seleted_option" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_text"
        android:layout_marginTop="50dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:text="Pick Date Time" />

    <EditText
        android:id="@+id/appointment_date"
        android:layout_width="match_parent"
        android:hint="@string/enter_date"
        android:focusableInTouchMode="false"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_alignParentRight="true"
        android:inputType="date" />

    <EditText
        android:id="@+id/appointment_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/appointment_date"
        android:layout_marginTop="50dp"
        android:hint="@string/enter_notes"
        android:inputType="text" />
    <Button
        android:id="@+id/book_appointment_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:text="Book Appointment" />

</RelativeLayout>